--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,4 @@
 
 <p [ngStyle]="{color:isActive ? 'green' :'red '}" class="text-center">Status</p>
 
-<button class="btn btn-primary">Click me</button>
-
+<button class="btn btn-primary new me">Click me</button>
